<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDFBD4"
    android:orientation="vertical"
    android:padding="14dp"
    tools:context=".ui.oferts.CabinetFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="36dp"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:background="@drawable/ocean_arrow_back_24"
        android:contentDescription="@string/app_name"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_current_users_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="6dp"
        android:background="@drawable/bg_frame"
        android:padding="6dp"
        android:text="mmmm@gmail.com"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="248dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:progress="8"
        android:progressTint="#2F4BEB"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_frame"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/select_pdf_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#F8F8F6"
                android:contentDescription="select_pdf_btn"
                android:src="@drawable/search_pdf_4" />

            <TextView
                android:id="@+id/titlePdfFile"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pdf_selected"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/upload_pdf_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#EDFBD4"
            android:contentDescription="upload_btn"
            android:src="@drawable/baseline_cloud_upload_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_frame"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/select_word_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#F8F8F6"
                android:contentDescription="select_pdf_btn"
                android:src="@drawable/search_word_02" />

            <TextView
                android:id="@+id/titleWordFile"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/word_selected"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>

        <ImageButton



        android:id="@+id/upload_word_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="upload_btn"
        android:src="@drawable/blue_cloud_upload_24"
        android:backgroundTint="#EDFBD4"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


    </LinearLayout>

    <TextView
        android:id="@+id/show_all_sent_scenarios"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_frame"
        android:padding="8dp"
        android:text="All Community Scenarios :"
        android:textColor="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_of_scenes_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_scenario" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_of_scenes_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_scenario_word" />
</LinearLayout>
